Fashion Sales project created

--- a/Galaxy Zoo/galaxy_classificator.ipynb
+++ b/Galaxy Zoo/galaxy_classificator.ipynb
@@ -34,7 +34,7 @@
     "*Galaxy Zoo 2* asked for more details on bright SDSS galaxies. These detailed classifications include (amongst others) measurements of the bulge size, presence of bars, and the structure of spiral arms. This is what it is aimed in this project, to construct a machine learning algorithm able to classify a given galaxy based on the classification rules defined in Galaxy Zoo 2. These rules are described in the image below.\n",
     "\n",
     "<figure>\n",
-    "<img src=\"decision_tree_of_classifications.png\" style=\"width:80%\">\n",
+    "<img src=\"Figures/decision_tree_of_classifications.png\" style=\"width:80%\">\n",
     "</figure>\n",
     "\n",
     "##### Weighting the responses\n",
@@ -137,14 +137,14 @@
     "As it is said in this [IBM article](https://www.ibm.com/topics/convolutional-neural-networks), neural networks are a subset of machine learning, and they are at the heart of deep learning algorithms. They are comprised of node layers, containing an input layer, one or more hidden layers, and an output layer. Each node connects to another and has an associated weight and threshold, as it is shown below.\n",
     "\n",
     "<figure>\n",
-    "    <img src=\"neural_networks-001.png\" style=\"width:80%\">\n",
+    "    <img src=\"Figures/neural_networks-001.png\" style=\"width:80%\">\n",
     "    <figcaption>Source: https://tikz.net/neural_networks/</figcaption>\n",
     "</figure>\n",
     "\n",
     "If the output of any individual node is above the specified threshold value, that node is activated, sending data to the next layer of the network. Otherwise, no data is passed along to the next layer of the network, as is outlined below.\n",
     "\n",
     "<figure>\n",
-    "    <img src=\"activation_function.ppm\" style=\"width:80%\">\n",
+    "    <img src=\"Figures/activation_function.ppm\" style=\"width:80%\">\n",
     "    <figcaption>Source: Google Images (2019)</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -187,7 +187,7 @@
     "This kind of layers perform the task of classification based on the features extracted through the previous layers and their different filters. While convolutional and pooling layers tend to use ReLu functions, for example, fully-connected layers usually leverage a softmax activation function to classify inputs appropriately, producing a probability from 0 to 1. This is what we will use in this project.\n",
     "\n",
     "<figure>\n",
-    "    <img src=\"fully_cnn.jpg\" style=\"width:100%\">\n",
+    "    <img src=\"Figures/fully_cnn.jpg\" style=\"width:100%\">\n",
     "    <figcaption>Source: https://developersbreach.com/convolution-neural-network-deep-learning/</figcaption>\n",
     "</figure>"
    ]
